--- a/client/app/src/main/res/layout/activity_auth.xml
+++ b/client/app/src/main/res/layout/activity_auth.xml
@@ -8,4 +8,26 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".AuthActivity">
 
+    <EditText
+        style="@style/EditText"
+        android:inputType="phone"
+        android:id="@+id/eTPhone"
+        android:hint="@string/phone"
+        android:layout_centerVertical="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/register"
+        android:id="@+id/btNReg"
+        android:onClick="onRegClick"
+        android:layout_below="@+id/eTPhone"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        style="@style/EditText"
+        android:inputType="textPersonName"
+        android:hint="@string/tvname"
+        android:id="@+id/etName"
+        android:layout_above="@+id/eTPhone" />
 </RelativeLayout>
