--- a/client/app/src/main/res/values/styles.xml
+++ b/client/app/src/main/res/values/styles.xml
@@ -12,4 +12,12 @@
         <item name="android:ems">10</item>
         <item name="android:textSize">@dimen/text</item>
     </style>
+
+    <style name="TextView" parent="android:Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:ems">10</item>
+        <item name="android:textSize">@dimen/text</item>
+    </style>
 </resources>
